tera/src/snapshot_tests/snapshots/tera__snapshot_tests__parser__parser_errors@postfix_not_before_ternary.txt.snap
---
source: tera/src/snapshot_tests/parser.rs
expression: res.unwrap_err()
input_file: tera/src/snapshot_tests/parser_inputs/errors/postfix_not_before_ternary.txt
---
error: `not` is only valid here as part of `not in`
 --> postfix_not_before_ternary.txt:1:6
  |
1 | {{ x not if cond else y }}
  |      ^^^
