tera/src/snapshot_tests/snapshots/tera__snapshot_tests__parser__parser_errors@ternary_too_deep.txt.snap
---
source: tera/src/snapshot_tests/parser.rs
expression: res.unwrap_err()
input_file: tera/src/snapshot_tests/parser_inputs/errors/ternary_too_deep.txt
---
error: The expression is too complex
 --> ternary_too_deep.txt:1:591
  |
1 | {{ 1 if true else 1 if true else 1 if true else 1 if true else 1 if true else 1 if true else 1 if true else 1 if true else 1 if true else 1 if true else 1 if true else 1 if true else 1 if true else 1 if true else 1 if true else 1 if true else 1 if true else 1 if true else 1 if true else 1 if true else 1 if true else 1 if true else 1 if true else 1 if true else 1 if true else 1 if true else 1 if true else 1 if true else 1 if true else 1 if true else 1 if true else 1 if true else 1 if true else 1 if true else 1 if true else 1 if true else 1 if true else 1 if true else 1 if true else 1 if true else 1 if true else 1 if true else 1 if true else 1 if true else 1 if true else 1 if true else 1 if true else 1 if true else 1 if true else 1 if true else 1 }}
  |                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                               ^^
