tera/src/snapshot_tests/snapshots/tera__snapshot_tests__parser__parser_errors@unary_op_after_tilde.txt.snap
---
source: tera/src/snapshot_tests/parser.rs
expression: res.unwrap_err()
input_file: tera/src/snapshot_tests/parser_inputs/errors/unary_op_after_tilde.txt
---
error: `-` is not allowed after `~`
 --> unary_op_after_tilde.txt:1:13
  |
1 | {{ "ho" ~ - "hey" }}
  |             ^^^^^
