tera/src/snapshot_tests/snapshots/tera__snapshot_tests__parser__parser_errors@unclosed_tag.txt.snap
---
source: tera/src/snapshot_tests/parser.rs
expression: res.unwrap_err()
input_file: tera/src/snapshot_tests/parser_inputs/errors/unclosed_tag.txt
---
error: Unexpected end of input
 --> unclosed_tag.txt:1:28
  |
1 | {% if i + 2 | integer > x %
  |                            ^
