tera/src/snapshot_tests/snapshots/tera__snapshot_tests__parser__parser_errors@unclosed_variable.txt.snap
---
source: tera/src/snapshot_tests/parser.rs
expression: res.unwrap_err()
input_file: tera/src/snapshot_tests/parser_inputs/errors/unclosed_variable.txt
---
error: Unexpected end of input
 --> unclosed_variable.txt:1:5
  |
1 | {{ 1
  |     ^
