tera/src/snapshot_tests/snapshots/tera__snapshot_tests__parser__parser_errors@unexpected_operator.txt.snap
---
source: tera/src/snapshot_tests/parser.rs
expression: res.unwrap_err()
input_file: tera/src/snapshot_tests/parser_inputs/errors/unexpected_operator.txt
---
error: Found `/` but expected one of: integer, float, string, bool, ident, `-`, `not`, `<`, `{`, `[` or `(`
 --> unexpected_operator.txt:1:4
  |
1 | {{ / }}
  |    ^
